added user feed

--- a/.air.toml
+++ b/.air.toml
@@ -7,8 +7,8 @@ tmp_dir = "bin"
   bin = "./bin/main.exe"
   cmd = "go build -o ./bin/main.exe ./cmd/api"
   delay = 1000
-  exclude_dir = ["assets", "bin", "vendor", "testdata", "docs", "scripts", "web"]
-  exclude_file = []
+  exclude_dir = ["assets", "bin", "vendor", "testdata", "docs", "scripts", "web", ".git"]
+  exclude_file = [".gitignore", "README.md"]
   exclude_regex = ["_test.go"]
   exclude_unchanged = false
   follow_symlink = false
