addes swagger docs

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 ADDR=":3000"
+ENV=""
+EXTERNAL_URL=""
 
 DB_ADDR="postgres://admin:adminpassword@localhost:5432/go-social?sslmode=disable"
 DB_MAX_OPEN_CONNS=30
