--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
-ADDR=":3000"
-ENV=""
-EXTERNAL_URL=""
+ADDR=":8080"
+ENV="development"
+EXTERNAL_URL="localhost:8080"
+
+SENDGRID_API_KEY=""
 
 DB_ADDR="postgres://admin:adminpassword@localhost:5432/go-social?sslmode=disable"
 DB_MAX_OPEN_CONNS=30
@@ -9,3 +11,6 @@ DB_MAX_IDLE_TIME="15m"
 
 GOOSE_DRIVER="postgres"
 GOOSE_DB_ADDR="postgres://admin:adminpassword@localhost:5432/go-social"
+
+EMAIL_ADDR=""
+FRONTEND_URL=""
