added role based authoriaztion

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 ADDR=":8080"
-ENV="development"
+ENV=""
 EXTERNAL_URL="localhost:8080"
 
+EMAIL_ADDR=""
 SENDGRID_API_KEY=""
 
 DB_ADDR="postgres://admin:adminpassword@localhost:5432/go-social?sslmode=disable"
@@ -12,5 +13,7 @@ DB_MAX_IDLE_TIME="15m"
 GOOSE_DRIVER="postgres"
 GOOSE_DB_ADDR="postgres://admin:adminpassword@localhost:5432/go-social"
 
-EMAIL_ADDR=""
-FRONTEND_URL=""
+FRONTEND_URL="http://localhost:5173"
+
+AUTH_BASIC_USER=""
+AUTH_BASIC_PASS=""
