--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 ADDR=":8080"
 ENV=""
+
 EXTERNAL_URL="localhost:8080"
+FRONTEND_URL="http://localhost:5173"
 
 EMAIL_ADDR=""
 SENDGRID_API_KEY=""
@@ -10,10 +12,16 @@ DB_MAX_OPEN_CONNS=30
 DB_MAX_IDLE_CONNS=30
 DB_MAX_IDLE_TIME="15m"
 
+REDIS_ADDR="localhost:6379"
+REDIS_PW=""
+REDIS_DB=
+REDIS_ENABLED=true
+
 GOOSE_DRIVER="postgres"
 GOOSE_DB_ADDR="postgres://admin:adminpassword@localhost:5432/go-social"
 
-FRONTEND_URL="http://localhost:5173"
 
 AUTH_BASIC_USER=""
 AUTH_BASIC_PASS=""
+
+JWT_AUTH_SECRET=""
