--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   db:
@@ -12,7 +11,7 @@ services:
       - db-data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
-   
+
   redis: 
     image: redis:7.4-alpine
     container_name: go-social-redis
@@ -22,15 +21,18 @@ services:
     volumes:
       - redis-data:/data
 
-  redis-commander:
-    image: rediscommander/redis-commander:latest
-    container_name: go-social-redis-commander
-    environment:
-      REDIS_HOSTS: redis
-    ports:
-      - "127.0.0.1:8081:8081"
-    depends_on:
-      - redis
+  # api:
+  #   build: .
+  #   container_name: go-social-api
+  #   depends_on:
+  #     - db
+  #     - redis
+  #   environment:
+  #     DB_ADDR: "postgres://admin:adminpassword@db:5432/go-social?sslmode=disable"
+  #     REDIS_ADDR: "redis:6379"
+  #   ports:
+  #     - "8080:8080"
+
     
 volumes:
   db-data:
